make things better

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ jishaku >= 0.1.5
 discord-timers==0.1.0
 beautifulsoup4 >= 4.8.2
 dpy-ui
-async_cleverbot
+asyncpg
 git+https://github.com/Rapptz/discord-ext-menus
 git+https://github.com/Rapptz/discord.py@master#egg=discord.py[voice]
 git+https://github.com/Devoxin/Lavalink.py@dev
