--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ colorama==0.4.3
 discord.py==1.3.2
 idna==2.9
 isort==4.3.21
+parsedatetime
 lavalink==3.0.0
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
